# QS_Membres_sur_carte

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
data/: adresses.csv
donnees/: config
src/Membres_sur_carte/: coord_from_addresses.py  coordonnees_a_partir_d_adresses.py  membres_sur_carte.py
src/slapping/: slap_that_like_button.py
tests/: test_slapping.py
