[metadata]
name = Membres_sur_carte
description = Met les membres de QS sur une carte
author = Jacob Blier
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages =
	Membres_sur_carte
install_requires =
	pgeocode>=0.3.0
	numpy>=1.22.2
	pandas>=1.4.1
	matplotlib>=3.5.1
python_requires = >=3.6
package_dir =
	=src
zip_safe = no

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
